# AlgoLab-2023

./: .gitignore
Exercises Templates/: CMakeLists.txt  base_template.cpp  template_base.cpp  yolo.cpp
Exercises Templates/W3 - BGL - Graphs/: Ant Challenge.cpp  CMakeLists.txt  FirstStepsWithBGL.cpp  ImportantBridges.cpp
Exercises Templates/W4 - Geometry Algebra/: Antenna.cpp  First Hit.cpp  Hit.cpp
Exercises Templates/W6 - BGL - Flow Networks/: CoinTossingTournament.cpp  Knights.cpp  London.cpp  Tiles.cpp
Exercises Templates/W7 - CGAL - Proximity Structures/: Bistro.cpp  Germs.cpp  Golden Eye.cpp  H1N1.cpp  delaunay.cpp  emst.cpp
Exercises Templates/W8 - Linear Programming/: Diet.cpp  Inball.cpp  Maximize it!.cpp  Suez.cpp
Exercises Templates/W9 - Advanced Flows/: Canteen.cpp
